# sqint

./: .gitignore  Cargo.toml  README.md  statiql-config.toml  statiql.toml  test_file.py
crates/finder/: Cargo.toml
crates/finder/src/: assign.rs  finder_type.rs  finder_types.rs  format.rs  formatters.rs  lib.rs  preanalysis.rs  range.rs  traversal.rs
crates/finder/src/tests/: features.rs  mod.rs
crates/logging/: Cargo.toml  statiql-config.toml
crates/logging/src/: lib.rs
crates/sqint/: Cargo.toml  pyproject.toml  sqint.toml
crates/sqint/src/: analyzer.rs  cli.rs  config.rs  files.rs  handlers.rs  main.rs
crates/sqint/src/assets/: default.toml
crates/sqint/test_raw_sql/: test_sql.sql
crates/statiql/: .gitignore  Cargo.toml  sqint.toml  statiql-config.toml  test_file.py
crates/statiql/src/: analyzer.rs  cli.rs  config.rs  files.rs  handlers.rs  logging.rs  main.rs
crates/statiql/src/assets/: default.toml
crates/statiql/test_perf/: test_file_regular.py
src/: analyzer.rs  cli.rs  config.rs  default.toml  finder.rs  logging.rs  main.rs  sql_finder.rs
