[package]
name = "staticql"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.11.1"
rustpython-parser = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlparser = "0.56.0"
thiserror = "2.0.12"
toml = "0.8.23"
