[workspace]
members = [
    "crates/finder",
    "crates/sqint",
    "crates/logging",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["David Bousi <bousi.david@pm.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ignore = "0.4.23"
atty = "0.2.14"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
rustpython-parser = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlparser = "0.56.0"
thiserror = "2.0.12"
toml = "0.8.23"
logging = { path = "crates/logging" }
finder = { path = "crates/finder" }
globset = "0.4.16"

[profile.release]
debug = true
