[package]
name = "statiql"
version = "0.0.0"
edition = "2024"

[dependencies]
# Add the dependencies your finder actually needs
logging.workspace = true
finder.workspace = true
regex.workspace = true
clap.workspace = true
serde.workspace = true
sqlparser.workspace = true
thiserror.workspace = true
toml.workspace = true
ignore.workspace = true
atty.workspace = true
globset.workspace = true
